# Photomosaic

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  main.cpp  preliminary notes.txt  valgrind-out.txt
.github/workflows/: build.yml
lib/include/: AVLMap.h  Image.h  Photomosaic.h  Pixel.h  sampleClass.h
lib/src/: Image.cpp  Photomosaic.cpp  Pixel.cpp  sampleClass.cpp
lib/stb/: stb_image_resize2.h
sampleImages/mosaics/fullDatabankMosaics/: info.txt
